fix hamburger menu overflow issue

--- a/src/scss/partials/_Navigation.scss
+++ b/src/scss/partials/_Navigation.scss
@@ -39,7 +39,7 @@
     justify-content: center;
     align-items: center;
     padding: 0;
-    top: -1300px;
+    top: -1500px;
     left: 0;
     width: 100%;
     height: 100vh;
